--- a/VIENNAAddIn/upcc3/Wizards/XsdImporterForm.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/XsdImporterForm.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.XsdImporterForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:viennaaddin="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
     Height="500" Width="516" WindowStyle="SingleBorderWindow" ShowInTaskbar="False" ResizeMode="CanResize" Title="XML Schema Importer Wizard">
     <DockPanel Background="#FFD4D0C8">
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,5,5,5">
@@ -18,6 +19,7 @@
                 <TabItem.Content>
                     <DockPanel>
                         <Label DockPanel.Dock="Top" Height="23" Name="label12">Select ebInterface Schema:</Label>
+                        <viennaaddin:FileSelector DockPanel.Dock="Top" Height="21" Width="286" />
                         <StackPanel Name="mappedSchemaFileSelectorPanel" DockPanel.Dock="Top" VerticalAlignment="Stretch" Margin="5,0,5,0" />
                         <Label DockPanel.Dock="Top" Name="label3" Height="23">Select mapping files:</Label>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
